# AI-Agent-Resume

./: .gitignore  README.md  main.py  pyproject.toml  streamlit.py
backend/app/: ai_service.py  main.py  vector_database.py
backend/app/routes/: ai_routes.py
backend/vector_db/: chroma.sqlite3
vector_db/: chroma.sqlite3
