[project]
name = "aipdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.1",
    "langchain-ollama>=1.1.0",
    "pypdf>=6.10.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
]
